--- a/index.html
+++ b/index.html
@@ -10,20 +10,46 @@ function startTime() {
     m = checkTime(m);
     s = checkTime(s);
     document.getElementById('txt').innerHTML =
-    h + ":" + m;
-    var t = setTimeout(startTime, 10000);
+    h + ":" + m + ":" + s;
+    var t = setTimeout(startTime, 500);
 }
 function checkTime(i) {
     if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
     return i;
 }
 </script>
+<style>
+h1 {
+    font-size: 750%;
+    font-family:"Courier New", Courier, monospace;
+}
+
+h2 {
+    font-size: 500%;
+    font-family:"Courier New", Courier, monospace;
+}
+
+p {
+    font-size: 500%;
+}
+
+div.txt
+{
+   font-size: 200%;
+
+}
+</style>
 </head>
 
 <body onload="startTime()">
 
+
+<h1>
 <div id="txt"></div>
+</h1>
+<p>This is a paragraph.</p>
+
+
 
 </body>
 </html>
-
