--- a/index.html
+++ b/index.html
@@ -7,48 +7,67 @@ function startTime() {
     var h = today.getHours();
     var m = today.getMinutes();
     var s = today.getSeconds();
+var day_str = dayOfWeekAsString(today.getDay());
     m = checkTime(m);
     s = checkTime(s);
-    document.getElementById('txt').innerHTML =
-    h + ":" + m + ":" + s;
-    var t = setTimeout(startTime, 500);
+    document.getElementById('txt1').innerHTML =
+    h + ":" + m ;
+    document.getElementById('txt2').innerHTML =
+    day_str + " - " + today.toLocaleDateString();
+     var t = setTimeout(startTime, 60000);
 }
 function checkTime(i) {
     if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
     return i;
 }
+
+/**
+* Converts a day number to a string.
+*
+* @method dayOfWeekAsString
+* @param {Number} dayIndex
+* @return {Number} Returns day as number
+*/
+function dayOfWeekAsString(dayIndex) {
+  return ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"][dayIndex];
+}
+/**
+* Converts a month number to a string.
+*/
+function monthAsString(monthIndex) {
+  return ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December'][monthIndex];
+}
+
+
+
 </script>
 <style>
 h1 {
     font-size: 750%;
-    font-family:"Courier New", Courier, monospace;
+    font-family:Verdana, Geneva, sans-serif;
 }
-
 h2 {
     font-size: 500%;
-    font-family:"Courier New", Courier, monospace;
+    font-family:Verdana, Geneva, sans-serif;
 }
-
-p {
-    font-size: 500%;
+p{
+    font-family:Verdana, Geneva, sans-serif;
+    padding: 0px 0px 0px 0px;
+    margin: 0px 0px 0px 0px;
 }
-
-div.txt
-{
-   font-size: 200%;
-
+p.clock {
+    font-size: 750%;
 }
+p.date_str {
+    font-size: 200%;
+ }
+
 </style>
 </head>
 
 <body onload="startTime()">
-
-
-<h1>
-<div id="txt"></div>
-</h1>
-<p>This is a paragraph.</p>
-
+<p class="clock" id="txt1"></p>
+<p class="date_str" id="txt2"></p>
 
 
 </body>
