--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ var day_str = dayOfWeekAsString(today.getDay());
     document.getElementById('txt1').innerHTML =
     h + ":" + m ;
     document.getElementById('txt2').innerHTML =
-    day_str + " - " + today.toLocaleDateString();
+    day_str + " - " + today.getDate() + "." + (today.getMonth()+1) + "." + today.getFullYear();
      var t = setTimeout(startTime, 60000);
 }
 function checkTime(i) {
@@ -56,10 +56,10 @@ p{
     margin: 0px 0px 0px 0px;
 }
 p.clock {
-    font-size: 750%;
+    font-size: 1500%;
 }
 p.date_str {
-    font-size: 200%;
+    font-size: 400%;
  }
 
 </style>
@@ -72,3 +72,4 @@ p.date_str {
 
 </body>
 </html>
+
