--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script LANGUAGE="JavaScript">
-var timerID = null
-var timerRunning = false
-
-function stopclock(){
-    if(timerRunning)
-        clearTimeout(timerID)
-    timerRunning = false
-}
-function startclock(){
-    stopclock()
-    showtime()
-}
-function showtime() {
+<script>
+function startTime() {
     var today = new Date();
     var h = today.getHours();
     var m = today.getMinutes();
     var s = today.getSeconds();
-    var day_str = dayOfWeekAsString(today.getDay());
+var day_str = dayOfWeekAsString(today.getDay());
     m = checkTime(m);
     s = checkTime(s);
     document.getElementById('txt1').innerHTML =
     h + ":" + m ;
-    document.getElementById('txt2').innerHTML = "";
+    document.getElementById('txt2').innerHTML =
+    s;
     document.getElementById('txt3').innerHTML =
     day_str + " - " + today.getDate() + "." + (today.getMonth()+1) + "." + today.getFullYear();
-    timerID = setTimeout(showtime, 60000);
-    timerRunning = true;
+     var t = setTimeout(startTime, 1000);
 }
 function checkTime(i) {
     if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
@@ -71,7 +59,7 @@ div{
 </style>
 </head>
 
-<body onload="startclock()">
+<body onload="startTime()">
 <div id="txt1"></div>
 <div id="txt2"></div>
 <div id="txt3"></div>
